objects/ContactEmailHistory__c.object
<CustomObject>
    <fields>
        <fullName>ContEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContFirstName__c</fullName>
        <formula>Contact__r.PRMFirstName__c</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContLastName__c</fullName>
        <formula>Contact__r.PRMLastName__c</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactStatusChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Status Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactStatus__c</fullName>
        <label>Contact Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Email History</relationshipLabel>
        <relationshipName>ContactEmailHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>IF(ISBLANK(TEXT(Contact__r.PRMLanguage__c)),&quot;en_US&quot;,TEXT(Contact__r.PRMLanguage__c))</formula>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRMCountryCluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRM Country / Cluster</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Contact Email History</relationshipLabel>
        <relationshipName>ContactEmailHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRMReasonForDecline__c</fullName>
        <label>Reason for Declining Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Contact Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Remarks</description>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalutationFormat__c</fullName>
        <formula>Text(Contact__r.PRMCountryClusterSetup__r.EmailCommunicationContactName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation Format</label>
        <type>Text</type>
    </fields>
    <label>Contact Email History</label>
    <nameField>
        <label>Contact Email History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Email History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>